modificacion de swagger y modificacion de endpoints
